--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 streamlit==1.36.0
-numpy>=1.26,<2.0
-matplotlib>=3.7,<3.9
+numpy==1.26.4
+matplotlib==3.8.4
 gymnasium==0.29.1
+shimmy>=1.3.0
 stable-baselines3==2.3.0
 torch==2.2.2
+cloudpickle==3.0.0
+scipy==1.11.4
+opencv-python-headless==4.9.0.80
