--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.36.0
 numpy==1.26.4
 matplotlib==3.8.4
 gymnasium==0.29.1
-shimmy>=1.3.0
+shimmy==2.0.0
 stable-baselines3==2.3.0
 torch==2.2.2
 cloudpickle==3.0.0
