--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 streamlit==1.36.0
-numpy==1.26.4
+numpy>=2.0.0
 matplotlib==3.8.4
 
-# RL stack (these versions are compatible)
+# RL stack (Python 3.13 compatible versions)
 gymnasium==0.29.1
 shimmy==1.3.0
-stable-baselines3==2.3.0
-torch==2.2.2     # CPU wheel exists for Linux + py3.11
+stable-baselines3==2.3.2
+torch==2.7.1
 
 # Helpful/likely already used
 cloudpickle==3.0.0
-scipy==1.11.4
+scipy==1.13.0
